--- a/gallery.html
+++ b/gallery.html
@@ -455,10 +455,14 @@
 
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 
-<a href="https://wa.me/01322845247" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/aciseed.jpg" alt="" class="img-full wrapper-xs bg-white>
+<a href="https://" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/aciseed.jpg" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
-		    <h3 class="text-info"> ACI Seed Agro </h3>
-				      </a>				
+		    <h3 class="text-info"> ACI Seed Agro
+
+<a href="https://wa.me/8801322845247" class="thumb-lg m-t-n-lg m-r-n-lg">
+<i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
+</h3>
+				      </a>					
 				       </p>
 				       </div>
 				    </div>
