--- a/gallery.html
+++ b/gallery.html
@@ -479,7 +479,7 @@
 		        <h3 class="text-info"> Bangla Shoppers </h3>
 				      </a>
 
-div class="line line-lg w-3x b-b b-danger m-auto"></div>
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
 
 <a href="https://" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/baganrajsahi.jpg" alt="" class="img-full wrapper-xs bg-white>
 			                                 </a>                        
