--- a/hajjapp.html
+++ b/hajjapp.html
@@ -43,7 +43,7 @@
 <section class="p-v-xl bg-light">
 <div class="container">
    <div class="row">
-<div class="col-sm-6">
+<div class="col-sm-5 col-sm-offset-2 text-center p-v m-v-xl">
 <div class="card">
   <div class="card-body">
     <h5 class="card-title">হজ্জ্ব ব্যবস্থাপনায় মোবাইল অ্যাপ 📋</h5>
@@ -56,7 +56,7 @@
   </div>
 </div>
 </div>
-<div class="col-sm-6">
+<div class="col-sm-5 text-center p-v m-v-xl">
 <img src="imgs/ph1.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">
 </div>
 </div>
