--- a/gallery.html
+++ b/gallery.html
@@ -423,7 +423,7 @@
 
  <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 
-<a href="https://quarbani.bengalmeat.com" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/bengalmeat.jpg" alt="" class="img-full wrapper-xs bg-white>
+<a href="https://qurbani.bengalmeat.com" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/bengalmeat.jpg" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		    <h3 class="text-info"> Bengal Meat </h3>
 				      </a>				
