--- a/gallery.html
+++ b/gallery.html
@@ -332,7 +332,15 @@
 <a href="https://sundarbancourierltd.com" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/sundarban.jpg" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		    <h3 class="text-info"> SundarBan Courier  Service </h3>
-				      </a>							       </p>
+				      </a>							  
+
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+
+<a href="https://smartbd.com" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/smartbd.jpg" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		    <h3 class="text-info">Smart Technologies  Ltd. </h3>
+				      </a>							
+     </p>
 				       </div>
 				    </div>
 				    </div>
