--- a/gallery.html
+++ b/gallery.html
@@ -386,6 +386,15 @@
 			                                                         
 		    <h3 class="text-info"> Al Haramain Perfumes </h3>
 				      </a>
+
+
+
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+
+<a href="https://efile.dhakaeducationboard.gov.bd/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/eduboard.jpg" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		    <h3 class="text-info"> Education Board Certificate Correction </h3>
+				      </a>
 </p>
 
 				         </div>
