--- a/gallery.html
+++ b/gallery.html
@@ -391,7 +391,7 @@
 
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 
-<a href="https://efile.dhakaeducationboard.gov.bd/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/eduboard.png" alt="" class="img-full wrapper-xs bg-white>
+<a href="https://efile.dhakaeducationboard.gov.bd/index.php/eservice/menu/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/eduboard.png" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		    <h3 class="text-info"> Education Board Certificate Correction </h3>
 				      </a>
