--- a/gallery.html
+++ b/gallery.html
@@ -449,7 +449,14 @@
 <a href="https://qurbani.bengalmeat.com" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/bengalmeat.jpg" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		    <h3 class="text-info"> Bengal Meat </h3>
-				      </a>				
+				      </a>			
+
+<	div class="line line-lg w-3x b-b b-danger m-auto"></div>
+
+<a href="https://artlandbdltd.com" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/artlandbd.jpg" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		    <h3 class="text-info"> Artland BD </h3>
+				      </a>			
 </p>
 				         </div>
 				    </div>
