--- a/gallery.html
+++ b/gallery.html
@@ -450,6 +450,13 @@
 			                                                         
 		    <h3 class="text-info"> Bengal Meat </h3>
 				      </a>			
+
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+
+<a href="https://artlandbdltd.com" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/artlandbd.jpg" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		    <h3 class="text-info"> Artland BD </h3>
+				      </a>			
 </p>
 				         </div>
 				    </div>
