--- a/gallery.html
+++ b/gallery.html
@@ -56,8 +56,7 @@
 <a href="#" class="btn btn-success"> Best of newborn </a>
 <br><br>
 <a href="hajjapp.html" class="btn btn-primary"> E- Hajj Information</a>
-<br><br>
-<a href="mcq.html" class="btn btn-primary"> MCQ </a>
+<a href="mcq.html" class="btn btn-warning"> MCQ </a>
 </span>
 </div>
 </div>
