--- a/gallery.html
+++ b/gallery.html
@@ -40,9 +40,9 @@
 <div class=""> 
                               
 	 <span class="m-b-xl text-center p-v m-v-xl"> 
-    <a href="#" class="btn btn-primary"> Best of 60es </a>
-<a href="#" class="btn btn-info"> Best of 70es </a>
-<a href="#" class="btn btn-danger"> Best of 80es </a>
+    <a href="sixtys.html" class="btn btn-primary"> Best of 60es </a>
+<a href="seventys.html" class="btn btn-info"> Best of 70es </a>
+<a href="eightys.html" class="btn btn-danger"> Best of 80es </a>
 </span>
                      
 		        <h3 class="text-info">🎓 আলহাজ্ব মোঃ আব্দুল খালেক এবং মিসেস সুফিয়া বেগম,বাড়ি ৩৫, রোড ০৩, ব্লক সি, সেকশন ১২, পল্লবী, ঢাকা ১২১৬।<br> 
@@ -51,9 +51,9 @@
 </span>
 </h3>
 		        <span class="m-b-xl text-center p-v m-v-xl"> 
-    <a href="#" class="btn btn-warning"> Best of 90es </a>
-<a href="#" class="btn btn-danger"> Best of older  </a>
-<a href="#" class="btn btn-success"> Best of newborn </a>
+    <a href="ninetys.html" class="btn btn-warning"> Best of 90es </a>
+<a href="older.html" class="btn btn-danger"> Best of older  </a>
+<a href="newborn.html" class="btn btn-success"> Best of newborn </a>
 <br><br>
 <a href="hajjapp.html" class="btn btn-primary"> E- Hajj Information</a>
 <a href="mcq.html" class="btn btn-warning"> MCQ </a>
