--- a/healthcontent.html
+++ b/healthcontent.html
@@ -29,9 +29,9 @@ https://www.facebook.com/profile.php?id=100075473425112
    <div class="row">
 <div id="carousel" class="carousel owl-theme slide" data-ride="carousel">
   <ol class="carousel-indicators">
-    <li data-target="#carousel" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel" data-slide-to="1"></li>
-    <li data-target="#carousel" data-slide-to="2"></li>
+    <li data-target="#carouselindicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselindicators" data-slide-to="1"></li>
+    <li data-target="#carouselindicators" data-slide-to="2"></li>
   </ol>
     <div class="item"><img src="imgs/hc1.jpg" alt="Symptoms"></div>
     <div class="item"><img src="imgs/hc2.jpg" alt=" health issues "></div>
@@ -55,10 +55,14 @@ https://www.facebook.com/profile.php?id=100075473425112
 <div class="item"><img src="imgs/hc20.jpg" alt=""></div>
 <div class="item"><img src="imgs/hc21.jpg" alt=""></div>
 </div>
-<div class="slider_nav">
-	<button class="am-next">Next</button>
-	<button class="am-prev">Previous</button>
-</div>
+  <a class="carousel-control-prev" href="#carouselindicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselindicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 
 </div>
 </div>
