--- a/healthcontent.html
+++ b/healthcontent.html
@@ -94,51 +94,11 @@ https://www.facebook.com/profile.php?id=100075473425112
 </script>
 
 <script type="text/javascript">
-var owl = $('.carousel');
-owl.owlCarousel({
-    rtl:true,
-    loop:true,
-    margin:1,
-    nav:true,
-    dots:false,
-    mouseDrag: true,
-    responsiveClass: true,
-    navContainer: '#nav',
-navText: [
-'<i class="fa fa-angle-left"></i>',  
-'<i class="fa fa-angle-right"></i>'],  responsiveClass:true,
-  responsive:{
-        0:{
-            items:1,
-            nav:true
-        },
-        600:{
-            items:1,
-            nav:true
-        },
-        900:{
-            items:1,
-            nav:true
-        },
-        1200:{
-            items:1,
-            nav:true,
-            loop:false
-        }
-    }
+
+$('.carousel').carousel({
+  interval: 2000
 });
 
-// Go to the next item
-$('.am-next').click(function() {
-    owl.trigger('next.owl.carousel');
-});
-
-// Go to the previous item
-$('.am-prev').click(function() {
-    // With optional speed parameter
-    // Parameters has to be in square bracket '[]'
-    owl.trigger('prev.owl.carousel', [300]);
-});
 </script>
 </body>
 </html> 
