--- a/healthcontent.html
+++ b/healthcontent.html
@@ -11,13 +11,16 @@ https://www.facebook.com/profile.php?id=100075473425112
 	<head>
 		<meta charset="utf-8">
 		<title>Health Journal</title>
-		<meta name="description" content="Health content Musammat Samina">
+		<meta name="description" content="health journal Musammat Samina">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=no" />
 		<link rel="shortcut icon" href="/favicon.ico">
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
-	    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" />
+
+	    <link rel="stylesheet" href="bower_components/owl-carousel2/dist/assets/owl.carousel.min.css" />
+        <link rel="stylesheet" href="bower_components/owl-carousel2/dist/assets/owl.theme.default.min.css" />
 	
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.theme.default.min.css">
+
 	</head>
 	<body>
 		<!--[if lt IE 10]>
@@ -27,41 +30,44 @@ https://www.facebook.com/profile.php?id=100075473425112
 <section>
 <div class="container">
    <div class="row">
-
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="imgs/hc1.jpg" alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="imgs/hc2.jpg" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="imgs/hc3.jpg" alt="Third slide">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+<div class="owl-carousel owl-theme">
+    <div class="item"><img src="imgs/hc1.jpg" alt="Jahangir Gate"></div>
+    <div class="item"><img src="imgs/hc2.jpg" alt="Bangladesh Army Stadium"></div>
+    <div class="item"><img src="imgs/hc3.jpg" alt=""></div>
+    <div class="item"><img src="imgs/hc4.jpg" alt=""></div>
+    <div class="item"><img src="imgs/hc5.jpg" alt=""></div>
+    <div class="item"><img src="imgs/hc6.jpg" alt=""></div>
+    <div class="item"><img src="imgs/hc7.jpg" alt=""></div>
+    <div class="item"><img src="imgs/hc8.jpg" alt=""></div>
+    <div class="item"><img src="imgs/hc9.jpg" alt=""></div>
+    <div class="item"><img src="imgs/hc10.jpg" alt=""></div>
+    <div class="item"><img src="imgs/hc11.jpg" alt=""></div>
+   <div class="item"><img src="imgs/hc12.jpg" alt="Jahangir Gate"></div>
+    <div class="item"><img src="imgs/hc13.jpg" alt="Bangladesh Army Stadium"></div>
+    <div class="item"><img src="imgs/hc14.jpg" alt=""></div>
+    <div class="item"><img src="imgs/hc15.jpg" alt=""></div>
+    <div class="item"><img src="imgs/hc16.jpg" alt=""></div>
+    <div class="item"><img src="imgs/hc17.jpg" alt=""></div>
+    <div class="item"><img src="imgs/hc18.jpg" alt=""></div>
+    <div class="item"><img src="imgs/hc19.jpg" alt=""></div>
+    <div class="item"><img src="imgs/hc20.jpg" alt=""></div>
+    <div class="item"><img src="imgs/hc21.jpg" alt=""></div>
+</div>
+<div class="slider_nav">
+	<button class="am-next">Next</button>
+	<button class="am-prev">Previous</button>
 </div>
 
 </div>
 </div>
 </section>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+		
+		<script src="bower_components/jquery/dist/jquery.min.js"></script>
+		
+		<script src="bower_components/owl-carousel2/dist/owl.carousel.min.js"></script>
+		
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.min.js"></script>
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-41EQ0WGSBY"></script>
@@ -85,8 +91,51 @@ https://www.facebook.com/profile.php?id=100075473425112
 </script>
 
 <script type="text/javascript">
-$('.carousel').carousel();
+var owl = $('.owl-carousel');
+owl.owlCarousel({
+    rtl:true,
+    loop:true,
+    margin:1,
+    nav:true,
+    dots:false,
+    mouseDrag: true,
+    responsiveClass: true,
+    navContainer: '#nav',
+navText: [
+'<i class="fa fa-angle-left"></i>',  
+'<i class="fa fa-angle-right"></i>'],  responsiveClass:true,
+  responsive:{
+        0:{
+            items:1,
+            nav:true
+        },
+        600:{
+            items:1,
+            nav:true
+        },
+        900:{
+            items:1,
+            nav:true
+        },
+        1200:{
+            items:1,
+            nav:true,
+            loop:false
+        }
+    }
+});
 
+// Go to the next item
+$('.am-next').click(function() {
+    owl.trigger('next.owl.carousel');
+});
+
+// Go to the previous item
+$('.am-prev').click(function() {
+    // With optional speed parameter
+    // Parameters has to be in square bracket '[]'
+    owl.trigger('prev.owl.carousel', [300]);
+});
 </script>
 </body>
 </html> 
