--- a/healthcontent.html
+++ b/healthcontent.html
@@ -52,6 +52,8 @@ https://www.facebook.com/profile.php?id=100075473425112
     <div class="item"><img src="imgs/hc19.jpg" alt=""></div>
     <div class="item"><img src="imgs/hc20.jpg" alt=""></div>
     <div class="item"><img src="imgs/hc21.jpg" alt=""></div>
+<div class="item"><img src="imgs/hc22.jpg" alt=""></div>
+    <div class="item"><img src="imgs/hc23.jpg" alt=""></div>
 </div>
 <div class="slider_nav">
 	<button class="am-next">Next</button>
