--- a/healths.html
+++ b/healths.html
@@ -52,40 +52,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 
 <script type="text/javascript">
-var owl = $('.carousel');
-owl.owlCarousel({
-    rtl:true,
-    loop:true,
-    margin:1,
-    nav:true,
-    dots:false,
-    mouseDrag: true,
-    responsiveClass: true,
-    navContainer: '#nav',
-navText: [
-'<i class="fa fa-angle-left"></i>',  
-'<i class="fa fa-angle-right"></i>'],  responsiveClass:true,
-  responsive:{
-        0:{
-            items:1,
-            nav:true
-        },
-        600:{
-            items:1,
-            nav:true
-        },
-        900:{
-            items:1,
-            nav:true
-        },
-        1200:{
-            items:1,
-            nav:true,
-            loop:false
-        }
-    }
-});
-
+const carousel = new bootstrap.Carousel('#myCarousel');
 </script>
   </body>
 </html>
