--- a/healths.html
+++ b/healths.html
@@ -15,7 +15,7 @@ https://www.facebook.com/profile.php?id=100075473425112
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title> Health Journal</title>
   </head>
   <body>
 
@@ -34,6 +34,64 @@ https://www.facebook.com/profile.php?id=100075473425112
     </div>
     <div class="carousel-item">
       <img src="imgs/hc3.jpg" class="d-block w-100" alt="...">
+    </div>
+<div class="carousel-item">
+      <img src="imgs/hc4.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="imgs/hc5.jpg" class="d-block w-100" alt="...">
+<div class="carousel-item">
+      <img src="imgs/hc6.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="imgs/hc7.jpg" class="d-block w-100" alt="...">
+    </div>
+<div class="carousel-item">
+      <img src="imgs/hc8.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="imgs/hc9.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="imgs/hc10.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="imgs/hc11.jpg" class="d-block w-100" alt="...">
+    </div>
+<div class="carousel-item">
+      <img src="imgs/hc12.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="imgs/hc13.jpg" class="d-block w-100" alt="...">
+<div class="carousel-item">
+      <img src="imgs/hc14.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="imgs/hc15.jpg" class="d-block w-100" alt="...">
+    </div>
+<div class="carousel-item">
+      <img src="imgs/hc16.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="imgs/hc17.jpg" class="d-block w-100" alt="...">
+    </div>
+<div class="carousel-item">
+      <img src="imgs/hc18.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="imgs/hc19.jpg" class="d-block w-100" alt="...">
+    </div>
+<div class="carousel-item">
+      <img src="imgs/hc20.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="imgs/hc21.jpg" class="d-block w-100" alt="...">
+    </div>
+<div class="carousel-item">
+      <img src="imgs/hc22.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="imgs/hc23.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
